<resources>
    <string name="app_name">RecogPlant</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_view001">view001</string>
    <string name="title_activity_viewf001">viewf001</string>
    <string name="optionValue">Elige una opción:</string>
    <string name="view001.1">Plantas sin hojas o raíces; tallos ramificados dicotómicamente; esporangios triloculares</string>
    <string name="view001.2">Plantas con hojas, raramente carente de raíces; esporangios uniloculares</string>
    <string name="view002.1">Hojas con una sola vena sin ramificar (afines a helechos).</string>
    <string name="view002.2">Hojas complejas (frondas), venas ramificadas (helechos).</string>
    <string name="view003.1">Hojas en verticilos de 10-15. Formando vainas en los nodos; tallos huecos, estriados</string>
    <string name="view003.2">Hojas arregladas espiralmente o rara vez en verticilos de 4; tallos sólidos no estriados.</string>
    <string name="view004.1">Hojas de 3-30 cm de longitud semejantes a pastos, acuáticos</string>
    <string name="view004.2">Hojas de menos de 3cm de longitud, diferentes a pastos, plantas terrestres o epitetricas no acuáticas.</string>
    <string name="view005.1">Hojas circinadas con</string>
    <string name="view005.2">Hojas no circinadas agrupadas en cormos cortos como tallos; Esporangios incrustados en la base de la hoja, no en esporocarpos globosos separados</string>
    <string name="view006.1">Estróbilos con 4 angulados: hojas oblongas a ovadas; heterospóricas</string>
    <string name="view006.2">Estróbilos redondeados en sección trasversal o esporangios en las axilas de las hojas sin modificar, hojas con el ápice puntiagudo, usualmente lineales, homosporicas</string>
    <string name="view007.1">Esporangios nacidos en las axilas de las hojas sin modificar, conos indistintos,</string>
    <string name="view007.2">Esporangios nacidos en las axilas de las hojas sin modificar que forman conos distintos; hojas horzintales presentes, con brotes verticales distantes a lo largo del rizoma; plantas terrestres.</string>
    <string name="view008.1">Estróbilos nacidos en pedúnculos foliosos o nodos en ramificaciones laterales; pedúnculos, si están presentes estrechamente espaciados cojinete de hojas no reducidos</string>
    <string name="view008.2">Estróbilos nacidos en distintos pedúnculos florífero</string>
    <string name="view009.1">Plantas acuáticas, flotando en la superficie (o varado en piscinas efímeras)</string>
    <string name="view009.2">Plantas terrestres, epitetricas, o enraizado en lodo o arena en agua poco profunda.</string>
    <string name="view010.1">Frondas mayores de 5 cm de longitud, pinadas; homosporicas</string>
    <string name="view010.2">Frondas de menos de 2 cm de longitud</string>
    <string name="view011.1">Frondas 1-2 mm Longitud, con papila menor que 0.1 mm de longitud sobre la superficie superior</string>
    <string name="view011.2">Frondas 1-2 cm de longitud, con tricomas en grupos de 4 con bases fusionadas en la superficie más alta</string>
    <string name="view012.1">Frondas con 4 pinas en el ápice del estípite, semejante a un trébol; heterospóricas, esporangios similares a nueces, en la base del estípite</string>
    <string name="view012.2">Frondas simples o variamente divididas, a menudo con numerosas pinnas, nacidas lateralmente, plantas homospóricas, con esporangios abaxiales en el envez de la superficie de la lámina o sobre prominencias especializadas similares a hojas.</string>
    <string name="view013.1">Esporangio erecto (raramente horizontal) espiciforme o de panícula incrustados en la base de la hoja o el estípite</string>
    <string name="view013.2">Esporangio en el envés de la lámina ó en la espiga o como panícula, y puede estar en el nacimiento de la hoja, en la parte media ó en el estípite</string>
    <string name="view014.1">Porciones fértiles 2 en panículas erectas; plantas no carnosas; rizoma en la superficie del suelo; raíces endurecidas</string>
    <string name="view014.2">Porciones fértiles (6-8 raramente, en plantas epipetricas) esporangio</string>
    <string name="view015.1">Láminas compuestas parcialmente fértil en forma de panícula</string>
    <string name="view015.2">Laminas simples (con ramificación dicotómica siempre y cuando sean epífitas) parcialmente fértil en forma de espiga (Raramente tienen 8 espigas, si es así serán epífitas) </string>
    <string name="view016.1">Frondas (pero no rizomas) trepadoras espiralmente sobre otras plantas, cada esporangio subtendido (casi acostado sobre el inducio.)</string>
    <string name="view016.2">Frondas no trepadoras; cada esporangio no subtendido por un inducio, si el inducio está presente cubre casi totalmente al esporangio</string>
    <string name="view017.1">Láminas bifurcadas dicotómicamente, de más de 15 cm de altura. Plantas terrestres.</string>
    <string name="view017.2">Láminas no bifurcadas dicotómicamente  o si es así, entonces epifitas y menores de 5 cm de altura Plantas terrestres, epitetricas o epífitas.</string>
    <string name="view018.1">Hojas menores de 5cm de longitud, carente de botones o yemas o si no, crecientes continuamente en las axilas, o en furcaciones,________________________ Plantas raras.</string>
    <string name="view018.2">Hojas de 0.7 a 4 m de altura, con brotes o un crecimiento continuo en las furcaciones: ramas de hojas en terminación con divisiones paralelas y muy finas, como las de un peine; esporangios con soros redondos sobre el envés de la fronda; plantas comunes.</string>
    <string name="view019.1">Partes fértiles no divididas</string>
    <string name="view019.2">Partes fértiles pinadas</string>
    <string name="view020.1">Venas con una sola furcación; entre la vena media y el margen; Con la superficie del envés escamosa, al menos una vena principal; rizomas escamosos; soros generalmente con 4 a esporangios.</string>
    <string name="view020.2">Venas de 2 a 3 veces furcadas entre la vena media y el margen; Con la superficie del envés glabra, menudo glauco; rizomas peludos; soros generalmente con más de 6 esporangios.</string>
    <string name="view021.1">Apice de la fronda con dos grandes pinas pinnadas-pinnatisecta;  escamas enteras en las yemas, estraminadas  de 6-8 por 1.5 a 2.5 mm; esporas tetrahedricas</string>
    <string name="view021.2">Apice de la fronda jóvenes con el último segmento dicotómico 1-vez pinnado; escamas ciliadas en yemas, anaranjadas-café, de menos 3 por 1 mm; esporas bilaterales</string>
    <string name="view022.1">Frondas ramificadas subtendidas por pinnas accesorias; ramificación de las pinnas iguales ejes teretes  esporas tetraédricas</string>
    <string name="view022.2">Frondas furcadas carentes de accesorios pinnados; pinnas ramificadas de manera desigual para producir pares alternos de pínulas; ejes distintos de estípites con rebordes laterales estrechos; esporas bilaterales</string>
    <string name="view023.1">Láminas carnosas; frondas cada uno con una estípula visible en la base; esporangios de cada soro fusionados para formar un sinangio.</string>
    <string name="view023.2">Láminas membranáceas a coráceas; frondas que carecen de estípulas en las bases; No esporangios fundido en un sinangio</string>
    <string name="view024.1">Laminas 1-vez pinnadas; frondas di mórficas; sinangios lineares, embebidos en la lámina; rizoma obviamente rastrero; estípulas semejantes a escamas</string>
    <string name="view024.2">Laminas de 2-4 veces pinnadas; frondas monomórficas; sinangios, en el envés, oblongos, semejantes a una almeja abierta; rizomas con una gran cantidad de estípulas carnosas</string>
    <string name="view025.1">Frondas fértiles y estériles disímiles, dimórficas, o láminas parcialmente dimorficas (frondas hemidimorficas, pinnas fértiles y estériles diferente en la misma fronda) </string>
    <string name="view025.2">Frondas monomorficas o casi asi. </string>
    <string name="view026.1">Frondas fértiles simples, bilobuladas, o furcadas dicotómicamente (Elaphoglossum peltatum) </string>
    <string name="view026.2">Cuchillas fértiles pinnatífidos, 1 vez pinnada, o más dividida</string>
    <string name="view027.1">Frondas estériles única célula de espesor (helechos tenues): ápices generalmente extendidos y radicando</string>
    <string name="view027.2">Firma de cuchillas estériles, más de 1 célula de espesor; ápices no radicando</string>
    <string name="view028.1">Los esporangios cubren la superficie abaxial de las hojas fértiles</string>
    <string name="view028.2">Los esporangios en soros discretos</string>
    <string name="view029.1">Frondas estériles 1 vez pinnadas o menos divididas</string>
    <string name="view029.2">Frondas estériles más de una vez pinnadas</string>
    <string name="view030.1">Frondas fértiles palmatífidas o pectinadas</string>
    <string name="view030.2">Frondas fértiles completamente pinnadas</string>
    <string name="view031.1">Rizomas en el ápice y estípite con bases escamosas; esporas bilaterales, MONOLETE</string>
    <string name="view031.2">Rizomas en el ápice y estípite con bases sin escamas o pelo; esporas globosas tetraédricas TRILETE</string>
    <string name="view032.1">Venas.NETTED</string>
    <string name="view032.2">Venas libres</string>
    <string name="view033.1">Soros marginales, protegidos por un segmento marginal reflexo, rizomas pobremente desarrolladas</string>
    <string name="view033.2">Soros cubriendo la superficie del envés de la fronda, o protegida por todos lados por los márgenes del segmento fuertemente matriculados y formación del grano como segmentos; rizoma fuertemente desarrollado.</string>
    <string name="view034.1">Frondas fertiles de dos a tres veces pinnadas</string>
    <string name="view034.2">Frondas fértiles una vez pinnadas</string>
    <string name="view035.1">Plantas de 2 a 5 m de alto, en pantanos y en Suramérica; esporas globosas, trilete</string>
    <string name="view035.2">Plantas menores de dos metros de alto, no acuáticas, terrestres hemiepifítas; esporas reniformes, monoletes</string>
    <string name="view036.1">Plantas hemiepífitas, con rizomas trepadores; Frondas fértiles una vez pinadas</string>
    <string name="view036.2">Plantas terrestres, con rizomas no trepadores; Frondas fértiles dos veces pinadas</string>
    <string name="view037.1">Rizomas y estípites bases vestidas con pelos</string>
    <string name="view037.2">Rizomas y estípites bases vestidas con escamas.</string>
    <string name="view038.1">Plantas hemiepifitas; frondas fértiles con un tejido no laminar</string>
    <string name="view038.2">Plantas terrestres; frondas fértiles con un tejido laminar</string>
    <string name="view039.1">Soros marginales, protegido por márgenes recurvados; frondas fértiles solo en distal 1/3 glabro</string>
    <string name="view039.2">Soros redonda para alargar en superficies blade abaxial, el margen usualmente no es recurvado, frondas fértiles en todo, pelos no circulares</string>
    <string name="view040.1">Soros marginales o submarginales en la fronda</string>
    <string name="view040.2">Soros abaxiales sobre las láminas, a lo largo de las venas, vena media, o difundidos a través de toda la superficie inferior de las laminas.</string>
    <string name="family57"></string>
    <string name="family94"></string>
    <string name="gender57">RADIOVITTARIA</string>
    <string name="gender94">THELYPTERIS</string>
    <string name="auth57">autor apellido</string>
    <string name="auth94">autor apellido</string>
    <string name="distr">Distribución</string>
    <string name="distr094">Lorem ipsum dolor sit amet, consectetur adipiscing elit.</string>
    <string name="descr">Descripción</string>
    <string name="descr57"></string>
    <string name="descr94"></string>
</resources>