<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.magdy.recogplant.viewf094"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollV"
        android:layout_width="fill_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/family94"
                android:id="@+id/FAMILY"
                android:textSize="@dimen/familyText"
                android:textColor="@color/negro"
                android:background="#E2EFB9"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender94"
                android:id="@+id/GENDER"
                android:textSize="@dimen/genderText"
                android:textColor="@color/negro"
                android:background="#E2EFB9"
                android:padding="5dp"
                android:gravity="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth94"
                android:id="@+id/AUTHOR"
                android:textSize="@dimen/autorText"
                android:textColor="@color/negro"
                android:background="#E2EFB9"
                android:padding="5dp"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/width_image"
                android:layout_height="560dp"
                android:background="@drawable/pteris_argyrea"
                android:layout_gravity="center"/>

            <LinearLayout android:id="@+id/chart"
                android:orientation="vertical"
                android:layout_width="wrap_content"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/descr"
                android:id="@+id/opf4"
                android:textSize="@dimen/descTitle"
                android:textColor="@color/negro"
                android:padding="@dimen/pgen"
                android:background="#E2EFB9"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/descr94"
                android:id="@+id/opf5"
                android:textSize="@dimen/descText"
                android:textColor="@color/negro"
                android:paddingLeft="@dimen/pleft"
                android:paddingRight="@dimen/pright"
                android:background="#E2EFB9"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/distr"
                android:id="@+id/opf6"
                android:textSize="@dimen/descText"
                android:textColor="@color/negro"
                android:padding="@dimen/pgen"
                android:background="#E2EFB9"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/distr094"
                android:id="@+id/opf7"
                android:textSize="@dimen/distText"
                android:textColor="@color/negro"
                android:paddingLeft="@dimen/pleft"
                android:paddingRight="@dimen/pright"
                android:paddingBottom="@dimen/pbottom"
                android:background="#E2EFB9"/>

        </LinearLayout>
    </ScrollView>
</LinearLayout>
