<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/pr3"
    tools:context="com.example.magdy.recogplant.viewf057"
    android:theme="@android:style/Theme.NoTitleBar.Fullscreen"
    android:orientation="vertical">

    <ScrollView
        android:id="@+id/scrollV"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:layout_weight="1"
        android:scrollbars="none">

        <LinearLayout
            android:id="@+id/layoutScroll"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/family57"
                android:id="@+id/FAMILY"
                android:layout_below="@+id/inicio"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textColor="@color/negro"
                android:background="#E2EFB9"
                android:padding="5dp"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/gender57"
                android:id="@+id/GENDER"
                android:layout_below="@+id/inicio"
                android:layout_centerHorizontal="true"
                android:textSize="22sp"
                android:textColor="@color/negro"
                android:background="#E2EFB9"
                android:padding="5dp"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/auth57"
                android:id="@+id/AUTHOR"
                android:layout_below="@+id/inicio"
                android:layout_centerHorizontal="true"
                android:textSize="16sp"
                android:textColor="@color/negro"
                android:background="#E2EFB9"
                android:padding="5dp"
                android:layout_gravity="center_vertical|right"
                android:gravity="center"/>

            <ImageView
                android:id="@+id/imageView"
                android:layout_width="@dimen/width_image"
                android:layout_height="560dp"
                android:padding="@dimen/myPadding"
                android:background="@drawable/pteris_argyrea"
                android:layout_gravity="center"/>

            <LinearLayout android:id="@+id/chart"
                android:orientation="vertical"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="Descripción"
                android:id="@+id/opf3"
                android:layout_below="@+id/inicio"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@color/negro"
                android:padding="12dp"
                android:background="#E2EFB9"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/descr57"
                android:id="@+id/opf4"
                android:layout_below="@+id/inicio"
                android:layout_centerHorizontal="true"
                android:textSize="18sp"
                android:textColor="@color/negro"
                android:layout_gravity="center_vertical|right"
                android:paddingLeft="12dp"
                android:paddingRight="12dp"
                android:background="#E2EFB9"/>

            <TextView
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/distr"
                android:id="@+id/opf5"
                android:layout_below="@+id/inicio"
                android:layout_centerHorizontal="true"
                android:textSize="20sp"
                android:textColor="@color/negro"
                android:padding="12dp"
                android:background="#E2EFB9"/>



        </LinearLayout>
    </ScrollView>
</LinearLayout>
